--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,21 +25,21 @@ jobs:
       - name: Run PHPCS
         run: composer phpcs
 
-  phpunit:
-    name: PHPUnit
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      
-      - name: Setup PHP
-        uses: shivammathur/setup-php@v2
-        with:
-          php-version: '8.2'
-          extensions: mysqli
-          tools: composer
-          
-      - name: Install dependencies
-        run: composer install --prefer-dist --no-progress
-        
-      - name: Run tests
-        run: composer test
+#   phpunit:
+#     name: PHPUnit
+#     runs-on: ubuntu-latest
+#     steps:
+#       - uses: actions/checkout@v3
+#       
+#       - name: Setup PHP
+#         uses: shivammathur/setup-php@v2
+#         with:
+#           php-version: '8.2'
+#           extensions: mysqli
+#           tools: composer
+#           
+#       - name: Install dependencies
+#         run: composer install --prefer-dist --no-progress
+#         
+#       - name: Run tests
+#         run: composer test
