--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,10 @@
     "require-dev": {
         "phpunit/phpunit": "^9.5",
         "wp-coding-standards/wpcs": "^3.0",
-        "squizlabs/php_codesniffer": "^3.7"
+        "squizlabs/php_codesniffer": "^3.7",
+        "phpstan/phpstan": "^2.1",
+        "php-stubs/wordpress-stubs": "^6.9",
+        "szepeviktor/phpstan-wordpress": "^2.0"
     },
     "autoload": {
         "psr-4": {
